tree-sitter-gti/test/corpus/language.txt
==================
Functions and control flow
==================

namespace std {
uint64_t pow(uint64_t base, uint64_t exponent) {
  mut uint64_t result = 1;
  for (mut uint64_t i = 0; i < exponent; i++) {
    result = result * base;
  }
  do {
    result = result - 1;
  } while (result > 1);
  return result;
}
}

---

(source_file
  (namespace_declaration
    (identifier)
    (namespace_body
      (function_declaration
        (type
          (primitive_type))
        (identifier)
        (parameter_clause
          (parameter
            (type
              (primitive_type))
            (identifier))
          (parameter
            (type
              (primitive_type))
            (identifier)))
        (block
          (variable_declaration
            (type
              (primitive_type))
            (identifier)
            (initializer_expression
              (primary_expression
                (literal
                  (integer_literal)))))
          (for_statement
            (variable_declaration
              (type
                (primitive_type))
              (identifier)
              (initializer_expression
                (primary_expression
                  (literal
                    (integer_literal)))))
            (binary_expression
              (primary_expression
                (identifier))
              (primary_expression
                (identifier)))
            (update_expression
              (primary_expression
                (identifier)))
            (block
              (expression_statement
                (assignment_expression
                  (primary_expression
                    (identifier))
                  (initializer_expression
                    (binary_expression
                      (primary_expression
                        (identifier))
                      (primary_expression
                        (identifier))))))))
          (do_while_statement
            (block
              (expression_statement
                (assignment_expression
                  (primary_expression
                    (identifier))
                  (initializer_expression
                    (binary_expression
                      (primary_expression
                        (identifier))
                      (primary_expression
                        (literal
                          (integer_literal))))))))
            (binary_expression
              (primary_expression
                (identifier))
              (primary_expression
                (literal
                  (integer_literal)))))
          (return_statement
            (initializer_expression
              (primary_expression
                (identifier)))))))))

==================
Symbolic logical aliases
==================

bool choose(bool left, bool right) {
  return left && right || false;
}

---

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_clause
      (parameter
        (type
          (primitive_type))
        (identifier))
      (parameter
        (type
          (primitive_type))
        (identifier)))
    (block
      (return_statement
        (initializer_expression
          (binary_expression
            (binary_expression
              (primary_expression
                (identifier))
              (primary_expression
                (identifier)))
            (primary_expression
              (literal
                (boolean_literal)))))))))

==================
Restricted member operators
==================

class Handle {
  mut int value = 0;
public:
  int& operator*() { return this.value; }
  mut int& operator*() mut { return this.value; }
  int& operator[](uint64_t index) { return this.value; }
  mut int& operator[](uint64_t index) mut { return this.value; }
  int operator()(int value) { return value; }
  Handle& operator->() { return this; }
  bool operator==(nullptr_t other) { return false; }
  bool operator!=(nullptr_t other) { return true; }
  operator bool() { return true; }
};

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (variable_declaration
        (type
          (primitive_type))
        (identifier)
        (initializer_expression
          (primary_expression
            (literal
              (integer_literal)))))
      (access_specifier)
      (operator_declaration
        (type
          (primitive_type)
          (reference_declarator))
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (member_expression
                (primary_expression
                  (this_expression))
                (identifier))))))
      (operator_declaration
        (type
          (primitive_type)
          (reference_declarator))
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (member_expression
                (primary_expression
                  (this_expression))
                (identifier))))))
      (operator_declaration
        (type
          (primitive_type)
          (reference_declarator))
        (parameter_clause
          (parameter
            (type
              (primitive_type))
            (identifier)))
        (block
          (return_statement
            (initializer_expression
              (member_expression
                (primary_expression
                  (this_expression))
                (identifier))))))
      (operator_declaration
        (type
          (primitive_type)
          (reference_declarator))
        (parameter_clause
          (parameter
            (type
              (primitive_type))
            (identifier)))
        (block
          (return_statement
            (initializer_expression
              (member_expression
                (primary_expression
                  (this_expression))
                (identifier))))))
      (operator_declaration
        (type
          (primitive_type))
        (parameter_clause
          (parameter
            (type
              (primitive_type))
            (identifier)))
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (identifier))))))
      (operator_declaration
        (type
          (user_type
            (identifier))
          (reference_declarator))
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (this_expression))))))
      (operator_declaration
        (type
          (primitive_type))
        (parameter_clause
          (parameter
            (type)
            (identifier)))
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (literal
                  (boolean_literal)))))))
      (operator_declaration
        (type
          (primitive_type))
        (parameter_clause
          (parameter
            (type)
            (identifier)))
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (literal
                  (boolean_literal)))))))
      (operator_declaration
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (literal
                  (boolean_literal))))))))))

==================
Generic class and fixed arrays
==================

class Pair<T> {
  T values[2];
public:
  Pair(T left, T right) : values({left, right}) {}
  ~Pair() { values[0] = values[1]; }
  T first() { return this.values[0]; }
};

int main() {
  Pair<int> pair = Pair<int>(1, 2);
  mut int values[2] = {1, 2};
  return pair.first() + values[0];
}

---

(source_file
  (class_declaration
    (identifier)
    (generic_parameter_clause
      (generic_parameter
        (identifier)))
    (class_body
      (variable_declaration
        (type
          (user_type
            (identifier)))
        (identifier)
        (array_extent
          (integer_literal)))
      (access_specifier)
      (constructor_declaration
        (identifier)
        (parameter_clause
          (parameter
            (type
              (user_type
                (identifier)))
            (identifier))
          (parameter
            (type
              (user_type
                (identifier)))
            (identifier)))
        (constructor_initializer_list
          (constructor_initializer
            (user_type
              (identifier))
            (constructor_initializer_argument_list
              (array_initializer
                (primary_expression
                  (identifier))
                (primary_expression
                  (identifier))))))
        (block))
      (destructor_declaration
        (identifier)
        (block
          (expression_statement
            (assignment_expression
              (index_expression
                (primary_expression
                  (identifier))
                (primary_expression
                  (literal
                    (integer_literal))))
              (initializer_expression
                (index_expression
                  (primary_expression
                    (identifier))
                  (primary_expression
                    (literal
                      (integer_literal)))))))))
      (method_declaration
        (type
          (user_type
            (identifier)))
        (identifier)
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (index_expression
                (member_expression
                  (primary_expression
                    (this_expression))
                  (identifier))
                (primary_expression
                  (literal
                    (integer_literal))))))))))
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_clause)
    (block
      (variable_declaration
        (type
          (user_type
            (identifier)
            (type_argument_clause
              (type
                (primitive_type)))))
        (identifier)
        (initializer_expression
          (call_expression
            (generic_function
              (identifier)
              (type_argument_clause
                (type
                  (primitive_type))))
            (argument_list
              (primary_expression
                (literal
                  (integer_literal)))
              (primary_expression
                (literal
                  (integer_literal)))))))
      (variable_declaration
        (type
          (primitive_type))
        (identifier)
        (array_extent
          (integer_literal))
        (initializer_expression
          (array_initializer
            (primary_expression
              (literal
                (integer_literal)))
            (primary_expression
              (literal
                (integer_literal))))))
      (return_statement
        (initializer_expression
          (binary_expression
            (call_expression
              (member_expression
                (primary_expression
                  (identifier))
                (identifier))
              (argument_list))
            (index_expression
              (primary_expression
                (identifier))
              (primary_expression
                (literal
                  (integer_literal))))))))))

==================
Direct brace construction
==================

Widget value{1, 2,};
Widget empty{};

---

(source_file
  (variable_declaration
    (type
      (user_type
        (identifier)))
    (identifier)
    (direct_initializer
      (primary_expression
        (literal
          (integer_literal)))
      (primary_expression
        (literal
          (integer_literal)))))
  (variable_declaration
    (type
      (user_type
        (identifier)))
    (identifier)
    (direct_initializer)))

==================
Expected and target conditionals
==================

#if target.os == "macos"
expected<int, bool> load() {
  return unexpected("failed");
}
#else
int load() { return 1; }
#endif

---

(source_file
  (conditional_declaration
    (if_directive
      (target_condition
        (string_literal)))
    (function_declaration
      (type
        (expected_type
          (type
            (primitive_type))
          (type
            (primitive_type))))
      (identifier)
      (parameter_clause)
      (block
        (return_statement
          (initializer_expression
            (primary_expression
              (unexpected_expression
                (primary_expression
                  (literal
                    (string_literal)))))))))
    (else_directive)
    (function_declaration
      (type
        (primitive_type))
      (identifier)
      (parameter_clause)
      (block
        (return_statement
          (initializer_expression
            (primary_expression
              (literal
                (integer_literal)))))))
    (endif_directive)))

==================
Confined variadic generics
==================

void forward<Args...>(Args... values) {
  consume(0, values...);
}

---

(source_file
  (function_declaration
    (type)
    (identifier)
    (generic_parameter_clause
      (generic_parameter
        (identifier)))
    (parameter_clause
      (parameter
        (type
          (user_type
            (identifier)))
        (identifier)))
    (block
      (expression_statement
        (call_expression
          (primary_expression
            (identifier))
          (argument_list
            (primary_expression
              (literal
                (integer_literal)))
            (pack_expansion
              (identifier))))))))

==================
References and unique ownership
==================

int inspect(Widget& widget) { return widget.read(); }

std::unique_ptr<Widget> create() {
  std::unique_ptr<Widget> widget = std::make_unique<Widget>();
  widget->increment();
  return std::move(widget);
}

---

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_clause
      (parameter
        (type
          (user_type
            (identifier))
          (reference_declarator))
        (identifier)))
    (block
      (return_statement
        (initializer_expression
          (call_expression
            (member_expression
              (primary_expression
                (identifier))
              (identifier))
            (argument_list))))))
  (function_declaration
    (type
      (user_type
        (scoped_identifier
          (identifier)
          (identifier))
        (type_argument_clause
          (type
            (user_type
              (identifier))))))
    (identifier)
    (parameter_clause)
    (block
      (variable_declaration
        (type
          (user_type
            (scoped_identifier
              (identifier)
              (identifier))
            (type_argument_clause
              (type
                (user_type
                  (identifier))))))
        (identifier)
        (initializer_expression
          (call_expression
            (generic_function
              (scoped_identifier
                (identifier)
                (identifier))
              (type_argument_clause
                (type
                  (user_type
                    (identifier)))))
            (argument_list))))
      (expression_statement
        (call_expression
          (member_expression
            (primary_expression
              (identifier))
            (identifier))
          (argument_list)))
      (return_statement
        (initializer_expression
          (call_expression
            (primary_expression
              (scoped_identifier
                (identifier)
                (identifier)))
            (argument_list
              (primary_expression
                (identifier)))))))))

==================
Class value generics
==================

class StaticArray<T, uint64_t N> {
  T values[N] = {};
public:
  uint64_t size() { return N; }
};

StaticArray<int, 4> values = StaticArray<int, 4>();

---

(source_file
  (class_declaration
    (identifier)
    (generic_parameter_clause
      (generic_parameter
        (identifier))
      (generic_parameter
        (identifier)))
    (class_body
      (variable_declaration
        (type
          (user_type
            (identifier)))
        (identifier)
        (array_extent
          (identifier))
        (initializer_expression
          (array_initializer)))
      (access_specifier)
      (method_declaration
        (type
          (primitive_type))
        (identifier)
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (identifier))))))))
  (variable_declaration
    (type
      (user_type
        (identifier)
        (type_argument_clause
          (type
            (primitive_type))
          (integer_literal))))
    (identifier)
    (initializer_expression
      (call_expression
        (generic_function
          (identifier)
          (type_argument_clause
            (type
              (primitive_type))
            (integer_literal)))
        (argument_list)))))

==================
Standard library imports
==================

#include <std/array>
#include <std/containers/vector>;
#include <std/char>

---

(source_file
  (include_directive
    (standard_library_path
      (standard_library_component
        (identifier))
      (standard_library_component
        (identifier))))
  (include_directive
    (standard_library_path
      (standard_library_component
        (identifier))
      (standard_library_component
        (identifier))
      (standard_library_component
        (identifier))))
  (include_directive
    (standard_library_path
      (standard_library_component
        (identifier))
      (standard_library_component))))

==================
Local type inference
==================

int main() {
  auto count = 1;
  mut auto total = count;
  return total;
}

---

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_clause)
    (block
      (variable_declaration
        (type)
        (identifier)
        (initializer_expression
          (primary_expression
            (literal
              (integer_literal)))))
      (variable_declaration
        (type)
        (identifier)
        (initializer_expression
          (primary_expression
            (identifier))))
      (return_statement
        (initializer_expression
          (primary_expression
            (identifier)))))))

=================================================================
Syntactic operator requirements (rejected later by semantic analysis)
=================================================================

class Cursor<I, S> {
public:
  bool operator!=(S& sentinel)
    requires std::sentinel_for<S, I>;
  operator bool()
    requires std::input_iterator<I>;
};

---

(source_file
  (class_declaration
    (identifier)
    (generic_parameter_clause
      (generic_parameter
        (identifier))
      (generic_parameter
        (identifier)))
    (class_body
      (access_specifier)
      (operator_declaration
        (type
          (primitive_type))
        (parameter_clause
          (parameter
            (type
              (user_type
                (identifier))
              (reference_declarator))
            (identifier)))
        (requires_clause
          (concept_application
            (scoped_identifier
              (identifier)
              (identifier))
            (identifier)
            (identifier))))
      (operator_declaration
        (parameter_clause)
        (requires_clause
          (concept_application
            (scoped_identifier
              (identifier)
              (identifier))
            (identifier)))))))

=====================================================
Multi-parameter concepts and trailing requires clauses
=====================================================

concept compatible<Left, Right> = std::same_pair<Left, Right>;

T accumulate<Iterator, Sentinel, std::numeric T>(
    mut Iterator first,
    Sentinel last,
    mut T init)
  requires std::input_iterator<Iterator>
        && std::sentinel_for<Sentinel, Iterator>
        and std::accumulates_into<Iterator, T> {
  return init;
}

class Algorithms {
public:
  T accumulate<Iterator, Sentinel, std::numeric T>(
      mut Iterator first, Sentinel last, mut T init) mut
    requires std::input_iterator<Iterator>
          && std::sentinel_for<Sentinel, Iterator>;
};

---

(source_file
  (concept_declaration
    (identifier)
    (identifier)
    (identifier)
    (concept_application
      (scoped_identifier
        (identifier)
        (identifier))
      (identifier)
      (identifier)))
  (function_declaration
    (type
      (user_type
        (identifier)))
    (identifier)
    (generic_parameter_clause
      (generic_parameter
        (identifier))
      (generic_parameter
        (identifier))
      (generic_parameter
        (scoped_identifier
          (identifier)
          (identifier))
        (identifier)))
    (parameter_clause
      (parameter
        (type
          (user_type
            (identifier)))
        (identifier))
      (parameter
        (type
          (user_type
            (identifier)))
        (identifier))
      (parameter
        (type
          (user_type
            (identifier)))
        (identifier)))
    (requires_clause
      (concept_application
        (scoped_identifier
          (identifier)
          (identifier))
        (identifier))
      (concept_application
        (scoped_identifier
          (identifier)
          (identifier))
        (identifier)
        (identifier))
      (concept_application
        (scoped_identifier
          (identifier)
          (identifier))
        (identifier)
        (identifier)))
    (block
      (return_statement
        (initializer_expression
          (primary_expression
            (identifier))))))
  (class_declaration
    (identifier)
    (class_body
      (access_specifier)
      (method_declaration
        (type
          (user_type
            (identifier)))
        (identifier)
        (generic_parameter_clause
          (generic_parameter
            (identifier))
          (generic_parameter
            (identifier))
          (generic_parameter
            (scoped_identifier
              (identifier)
              (identifier))
            (identifier)))
        (parameter_clause
          (parameter
            (type
              (user_type
                (identifier)))
            (identifier))
          (parameter
            (type
              (user_type
                (identifier)))
            (identifier))
          (parameter
            (type
              (user_type
                (identifier)))
            (identifier)))
        (requires_clause
          (concept_application
            (scoped_identifier
              (identifier)
              (identifier))
            (identifier))
          (concept_application
            (scoped_identifier
              (identifier)
              (identifier))
            (identifier)
            (identifier)))))))

==================
Constexpr declarations
==================

constexpr uint64_t extent = 4;
static constexpr uint64_t local_extent = extent;

class Limits {
public:
  static constexpr uint64_t count = extent;
  constexpr uint64_t deferred() { return count; }
};

constexpr uint64_t deferred_twice(uint64_t value) { return value * 2; }

int32_t compile_choice() {
  if constexpr (true) {
    return 1;
  } else {
    return 0;
  }
}

---

(source_file
  (variable_declaration
    (type
      (primitive_type))
    (identifier)
    (initializer_expression
      (primary_expression
        (literal
          (integer_literal)))))
  (static_variable_declaration
    (type
      (primitive_type))
    (identifier)
    (initializer_expression
      (primary_expression
        (identifier))))
  (class_declaration
    (identifier)
    (class_body
      (access_specifier)
      (static_variable_declaration
        (type
          (primitive_type))
        (identifier)
        (initializer_expression
          (primary_expression
            (identifier))))
      (method_declaration
        (type
          (primitive_type))
        (identifier)
        (parameter_clause)
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (identifier))))))))
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_clause
      (parameter
        (type
          (primitive_type))
        (identifier)))
    (block
      (return_statement
        (initializer_expression
          (binary_expression
            (primary_expression
              (identifier))
            (primary_expression
              (literal
                (integer_literal))))))))
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_clause)
    (block
      (if_statement
        (primary_expression
          (literal
            (boolean_literal)))
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (literal
                  (integer_literal))))))
        (block
          (return_statement
            (initializer_expression
              (primary_expression
                (literal
                  (integer_literal))))))))))

=======================================
Mutable free-function reference returns
=======================================

mut T& borrow_mut<T>(mut T& value);

---

(source_file
  (function_declaration
    (type
      (user_type
        (identifier))
      (reference_declarator))
    (identifier)
    (generic_parameter_clause
      (generic_parameter
        (identifier)))
    (parameter_clause
      (parameter
        (type
          (user_type
            (identifier))
          (reference_declarator))
        (identifier)))))

========================================
Raw pointers and lexical unsafe statements
========================================

void raw(mut uint8_t* writable, const uint8_t* readable) {
  unsafe {
    mut uint8_t* alias = &writable[0];
    *alias = readable[0];
    writable->value;
  }
}

---

(source_file
  (function_declaration
    (type)
    (identifier)
    (parameter_clause
      (parameter
        (type
          (primitive_type)
          (pointer_declarator))
        (identifier))
      (parameter
        (type
          (primitive_type)
          (pointer_declarator))
        (identifier)))
    (block
      (unsafe_statement
        (block
          (variable_declaration
            (type
              (primitive_type)
              (pointer_declarator))
            (identifier)
            (initializer_expression
              (unary_expression
                (index_expression
                  (primary_expression
                    (identifier))
                  (primary_expression
                    (literal
                      (integer_literal)))))))
          (expression_statement
            (assignment_expression
              (unary_expression
                (primary_expression
                  (identifier)))
              (initializer_expression
                (index_expression
                  (primary_expression
                    (identifier))
                  (primary_expression
                    (literal
                      (integer_literal)))))))
          (expression_statement
            (member_expression
              (primary_expression
                (identifier))
              (identifier))))))))

==================
C ABI linkage declarations
==================

extern "C" {
  int32_t socket(int32_t domain, int32_t type, int32_t protocol);
  int32_t close(int32_t descriptor);
}

---

(source_file
  (extern_c_declaration
    (string_literal)
    (extern_c_function_prototype
      (type
        (primitive_type))
      (identifier)
      (parameter_clause
        (parameter
          (type
            (primitive_type))
          (identifier))
        (parameter
          (type
            (primitive_type))
          (identifier))
        (parameter
          (type
            (primitive_type))
          (identifier))))
    (extern_c_function_prototype
      (type
        (primitive_type))
      (identifier)
      (parameter_clause
        (parameter
          (type
            (primitive_type))
          (identifier))))))

==================
Compound assignments
==================

void update(mut int value) {
  value *= 2;
  value /= 2;
  value %= 3;
  value &= 1;
  value |= 2;
  value ^= 3;
  value <<= 1;
  value >>= 1;
}

---
